--- a/diaballik-frontend/src/app/board-component/board-component.component.css
+++ b/diaballik-frontend/src/app/board-component/board-component.component.css
@@ -5,7 +5,7 @@ div {
 .board {
    box-sizing: border-box;
    border: var(--border-cell) solid;
-   background-color: rgba(225, 40, 231, 0.658);
+   background-color: rgba(255, 255, 255, 0.658);
    width: var(--size-cell);
    height: var(--size-cell);
    float: left;
@@ -18,5 +18,20 @@ div {
     margin-right: auto;
 }
 
-
-    
+.circle{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(248, 9, 9, 0.658);
+    border-radius: 50%;
+}
+.hasBall{
+    position: relative;
+    top:25%;
+    margin-left: auto;
+    margin-right:auto;
+    width:50%;
+    height:50%;
+   
+    background-color:white;
+    border-radius: 50%;
+}
