--- a/diaballik-frontend/src/app/board-component/board-component.component.html
+++ b/diaballik-frontend/src/app/board-component/board-component.component.html
@@ -1,6 +1,6 @@
 <main>
   <h1>{{title}}</h1>
   <div class="aclass" *ngFor="let x of [0,1,2,3,4,5,6]"[attr.data-x]=x>
-    <div class="board" *ngFor="let y of [0,1,2,3,4,5,6]"[attr.data-y]=y></div>
+    <div class="board" *ngFor="let y of [0,1,2,3,4,5,6]"[attr.data-y]=y><div *ngIf="x==0 || x==6" class="circle"><div *ngIf="y==3 &&(x==0||x==6)"class="hasBall"></div></div></div>
   </div>
 </main>
