--- a/diaballik-frontend/src/app/board-component/board-component.component.html
+++ b/diaballik-frontend/src/app/board-component/board-component.component.html
@@ -1,14 +1,15 @@
 <main>
   <h1>{{title}}</h1>
-  <h2>{{data.storage.joueur2.name}}</h2>
-  <h2>Mange mes</h2>
-  <div class="aclass" *ngFor="let x of [0,1,2,3,4,5,6]"[attr.data-x]=x>
-    <div class="board" *ngFor="let y of [0,1,2,3,4,5,6]"[attr.data-y]=y>
-      <div *ngIf="x==0 || x==6" class="circle">
-        <div *ngIf="y==3 &&(x==0||x==6)"class="hasBall">
 
+  <h2 style="margin-left:50%;">{{data.storage.joueur1.name}}</h2>
+  <div class="aclass" *ngFor="let x of [0,1,2,3,4,5,6]"[attr.data-x]=x (click)="leftClick()">
+    <div class="board" *ngFor="let y of [0,1,2,3,4,5,6]"[attr.data-y]=y>
+      <div *ngIf="data.storage.board.plateau[x][y]!=null"class="circle" [ngStyle]="{'background-color':data.storage.board.plateau[x][y].color}">
+        <div *ngIf="data.storage.board.plateau[x][y].hasBall == true"class="hasBall">
+     
         </div>
       </div>
     </div>
   </div>
+  <h2 style="margin-left:50%">{{data.storage.joueur2.name}}</h2>
 </main>
