Ajout de fonctionalités pour pouvoir jouer(Vision des mouvements possibles, mouvement executé..) ;

--- a/diaballik-frontend/src/app/board-component/board-component.component.css
+++ b/diaballik-frontend/src/app/board-component/board-component.component.css
@@ -12,6 +12,9 @@ div {
    padding: 0;
    margin: 0;
 }
+.grey {
+    background-color: grey !important;
+}
 .aclass {
     display: table;
     margin-left: auto;
