Correction nombre action IA, ajout bouton playIA

--- a/diaballik-frontend/src/app/board-component/board-component.component.html
+++ b/diaballik-frontend/src/app/board-component/board-component.component.html
@@ -19,5 +19,6 @@
   <p>Nombre d'actions effectuée : {{data.storage.nbAction}}</p>
   <button (click) ="undo()">UNDO</button>
   <button (click) = "redo()">REDO</button>
+  <button (click) = "iaPlay()">Faire jouer l'IA</button>
 </div>
 </main>
