--- a/diaballik-frontend/src/app/menu/menu.component.html
+++ b/diaballik-frontend/src/app/menu/menu.component.html
@@ -1,5 +1,16 @@
-<p>
-  menu works!
-</p>
+<form>
+  <select name="typeBoard">
+    <option value="Standard">Standard</option>
+    <option value="Random">Random</option>
+    <option value="AmongUs">Among Us</option>
+  </select><br/>
+  
+  <input type="radio" name="typeGame" value="PVP" id="pvp"><label for="pvp">PVP</label>
+  <input type="radio" name="typeGame" value="PVP" id="pvia"><label for="piva">PVIA</label><br/>
+  <label for="nj1">Nom du joueur 1 : </label>
+  <input type="text" placeholder="Nom joueur 1" id="nj1">
+</form>
+  
+
 
 
