Menu + création de game via ce dernier

--- a/diaballik-frontend/src/app/board-component/board-component.component.html
+++ b/diaballik-frontend/src/app/board-component/board-component.component.html
@@ -18,6 +18,6 @@
   <p>Nombre d'actions effectuée : {{data.storage.nbAction}}</p>
   <button (click) ="undo()">UNDO</button>
   <button (click) = "redo()">REDO</button>
-  <button (click) = "iaPlay()">Faire jouer l'IA</button>
+  <button *ngIf="IA == true"(click) = "iaPlay()">Faire jouer l'IA</button>
 </div>
 </main>
