--- a/diaballik-frontend/src/app/board-component/board-component.component.html
+++ b/diaballik-frontend/src/app/board-component/board-component.component.html
@@ -1,23 +1,27 @@
 <main>
-  <div class="left">
-  <h2 style="margin-left:50%;">{{data.storage.joueur1.name}}</h2>
+  <div *ngIf="dataGame.storage.type=='Game'" class="left">
+  <h2 style="margin-left:50%;">{{dataGame.storage.joueur1.name}}</h2>
   <div class="aclass" *ngFor="let x of [0,1,2,3,4,5,6]"[attr.data-x]=x >
-    <div class="board" *ngFor="let y of [0,1,2,3,4,5,6]"[attr.data-y]=y [ngStyle]="data.isInList(x,y) && {'background-color':'grey'}" (click)="leftClick(x,y)">
-      <div *ngIf="data.storage.board.plateau[x][y]!=null"class="circle" [ngStyle]="{'background-color':data.storage.board.plateau[x][y].color}">
-        <div *ngIf="data.storage.board.plateau[x][y].hasBall == true"class="hasBall">
+    <div class="board" *ngFor="let y of [0,1,2,3,4,5,6]"[attr.data-y]=y [ngStyle]="dataGame.isInList(x,y) && {'background-color':'grey'}" (click)="leftClick(x,y)">
+      <div *ngIf="dataGame.storage.board.plateau[x][y]!=null"class="circle" [ngStyle]="{'background-color':dataGame.storage.board.plateau[x][y].color}">
+        <div *ngIf="dataGame.storage.board.plateau[x][y].hasBall == true"class="hasBall">
      
         </div>
       </div>
     </div>
   </div>
-  <h2 style="margin-left:50%">{{data.storage.joueur2.name}}</h2>
+  <h2 style="margin-left:50%">{{dataGame.storage.joueur2.name}}</h2>
+</div>
+<div *ngIf="dataGame.storage.type!=='Game'"class="left">
+  <p>Le joueur gagnant est {{dataGame.storage.name}}</p>
 </div>
 <div class="right">
-  <p>Tour de : {{data.storage.color}}</p>
-  <p>Tour n° : {{data.storage.numTurn}}</p>
-  <p>Nombre d'actions effectuée : {{data.storage.nbAction}}</p>
+  <p>Tour de : {{dataGame.storage.color}}</p>
+  <p>Tour n° : {{dataGame.storage.numTurn}}</p>
+  <p>Nombre d'actions effectuée : {{dataGame.storage.nbAction}}</p>
   <button (click) ="undo()">UNDO</button>
   <button (click) = "redo()">REDO</button>
+  <button (click)="save()">SAVE</button>
   <button *ngIf="IA == true"(click) = "iaPlay()">Faire jouer l'IA</button>
 </div>
 </main>
