--- a/diaballik-frontend/src/app/menu/menu.component.html
+++ b/diaballik-frontend/src/app/menu/menu.component.html
@@ -1,28 +1,53 @@
 
-  <select name="typeBoard" (input)="mode=$event.target.value">
-    <option value="Standard">Standard</option>
-    <option value="Random">Random</option>
-    <option value="AmongUs">Among Us</option>
-  </select><br/>
-  
-  <input type="radio" name="typeGame" value="PVP" id="pvp" (change)="ia=false" checked required><label for="pvp">PVP</label>
-  <input type="radio" name="typeGame" value="PVIA" id="pvia"(change)="ia=true" required><label for="piva">PVIA</label><br/>
-  <label for="nj1">Nom du joueur 1 : </label>
-  <input type="text" (input)="n1=$event.target.value" name="nomJ1" placeholder="Nom joueur 1" id="nj1" required><br/>
-  <div *ngIf="!this.ia">  
-    <label for="nj2">Nom du joueur 2 : </label>
-    <input type="text" placeholder="Nom Joueur 2" (input)="n2=$event.target.value" id ="nj2" required><br/>
+<div class="wrapper">
+  <div class="center">
+    <input type="radio"  name="typeJeu" value="newgame" id="newgame" (change)="typeJeu='newgame'" checked required><label for="newgame">New Game</label><br/>
+    <input type="radio" name="typeJeu" value="load" id="load"(change)="typeJeu='load'" required><label for="load">Load Game</label><br/>
+    <input type="radio" name="typeJeu" value="replay" id="replay"(change)="typeJeu='replay'" required><label for="replay">Replay a game</label><br/>
+    <div *ngIf="typeJeu==='newgame'" class="choixplateau">
+      <select name="typeBoard" (input)="mode=$event.target.value">
+        <option value="Standard">Standard</option>
+        <option value="Random">Random</option>
+        <option value="AmongUs">Among Us</option>
+      </select><br/>
+    </div>
+    <div *ngIf="typeJeu==='newgame'" class="ChoixIA">  
+      <input type="radio" name="typeGame" value="PVP" id="pvp" (change)="ia=false" checked required><label for="pvp">PVP</label>
+      <input type="radio" name="typeGame" value="PVIA" id="pvia"(change)="ia=true" required><label for="piva">PVIA</label><br/>
+    </div>
   </div>
-  <div *ngIf="this.ia">
+  <div *ngIf="typeJeu==='newgame'" class="nom">
+    <label for="nomGame">Nom de la partie : </label>
+    <input type="text" (input)="nomGame=$event.target.value" id="nomGame" placeholder="Nom de la partie" required><br/>
+    <label for="nj1">Nom du joueur 1 : </label>
+    <input type="text" (input)="n1=$event.target.value" name="nomJ1" placeholder="Nom joueur 1" id="nj1" required><br/>
+    <div *ngIf="!this.ia">  
+      <label for="nj2">Nom du joueur 2 : </label>
+      <input type="text" placeholder="Nom Joueur 2" (input)="n2=$event.target.value" id ="nj2" required><br/>
+    </div>
+  </div>
+  <div *ngIf="this.ia && typeJeu==='newgame'">
     <label for="lvlIA">Niveau de l'IA : </label>
     <select name="difficulty" (input)="diff=$event.target.value" id="lvlIA">
-    <option value="Noob">Noob</option>
-    <option value="Advanced">Advanced</option>
-    <option value="Progressive">Progressive</option>
-  </select><br/>
+      <option value="Noob">Noob</option>
+      <option value="Advanced">Advanced</option>
+      <option value="Progressive">Progressive</option>
+    </select><br/>
+  </div>
+  <div *ngIf="typeJeu==='newgame'"class="center">
+    <button (click)="onVali()">Créér la partie</button>
+  </div>
+  <p *ngIf="typeJeu==='load' || typeJeu==='replay'">Nom de la partie à charger : {{nomGame}}</p>
+  <div *ngIf="typeJeu==='load' || typeJeu==='replay'" class="listenom">
+    <div *ngFor="let nameGame of listeGame" (click)="nomGame=nameGame">{{nameGame}}</div>
+  </div>
+  <div *ngIf="typeJeu==='load'" class="center">
+    <button (click)="onVali()">Load this game !</button>
+  </div>
+  <div *ngIf="typeJeu==='replay'" class="center">
+    <button (click)="onVali()">Replay this game !</button>
+  </div>
 </div>
-  <button (click)="onVali()">Créér la partie</button>
-  
 
   
 
