--- a/diaballik-frontend/src/app/menu/menu.component.html
+++ b/diaballik-frontend/src/app/menu/menu.component.html
@@ -1,19 +1,19 @@
-
 <div class="wrapper">
-  <div class="center">
-    <input type="radio"  name="typeJeu" value="newgame" id="newgame" (change)="typeJeu='newgame'" checked required><label for="newgame">New Game</label><br/>
-    <input type="radio" name="typeJeu" value="load" id="load"(change)="typeJeu='load'" required><label for="load">Load Game</label><br/>
-    <input type="radio" name="typeJeu" value="replay" id="replay"(change)="typeJeu='replay'" required><label for="replay">Replay a game</label><br/>
+    <input type="radio"  name="typeJeu" value="newgame" id="newgame" (change)="typeJeu='newgame'" checked required><label class="labtn" for="newgame">New Game</label>
+    <input type="radio" name="typeJeu" value="load" id="load"(change)="typeJeu='load'" required><label class="labtn" for="load">Load Game</label>
+    <input type="radio" name="typeJeu" value="replay" id="replay"(change)="typeJeu='replay'" required><label class="labtn" for="replay">Replay a game</label>
+    <div class="center">
     <div *ngIf="typeJeu==='newgame'" class="choixplateau">
-      <select name="typeBoard" (input)="mode=$event.target.value">
+      <label for="choixplateau">Type du plateau : 
+      <select name="typeBoard" (input)="mode=$event.target.value" id="choixplateau">
         <option value="Standard">Standard</option>
         <option value="Random">Random</option>
         <option value="AmongUs">Among Us</option>
-      </select><br/>
+      </select></label><br/>
     </div>
     <div *ngIf="typeJeu==='newgame'" class="ChoixIA">  
-      <input type="radio" name="typeGame" value="PVP" id="pvp" (change)="ia=false" checked required><label for="pvp">PVP</label>
-      <input type="radio" name="typeGame" value="PVIA" id="pvia"(change)="ia=true" required><label for="piva">PVIA</label><br/>
+      <label class="labtn" for="pvp">PVP <input type="radio" name="typeGame" value="PVP" id="pvp" (change)="ia=false" checked required></label>
+      <label class="labtn" for="pvia">PVIA<input type="radio" name="typeGame" value="PVIA" id="pvia"(change)="ia=true" required></label><br/>
     </div>
   </div>
   <div *ngIf="typeJeu==='newgame'" class="nom">
@@ -27,29 +27,25 @@
     </div>
   </div>
   <div *ngIf="this.ia && typeJeu==='newgame'">
-    <label for="lvlIA">Niveau de l'IA : </label>
+    <label for="lvlIA">Niveau de l'IA : 
     <select name="difficulty" (input)="diff=$event.target.value" id="lvlIA">
       <option value="Noob">Noob</option>
       <option value="Advanced">Advanced</option>
       <option value="Progressive">Progressive</option>
-    </select><br/>
+    </select></label><br/>
   </div>
   <div *ngIf="typeJeu==='newgame'"class="center">
-    <button (click)="onVali()">Créér la partie</button>
+    <button class="btn" (click)="onVali()">Créér la partie</button>
   </div>
   <p *ngIf="typeJeu==='load' || typeJeu==='replay'">Nom de la partie à charger : {{nomGame}}</p>
-  <div *ngIf="typeJeu==='load' || typeJeu==='replay'" class="listenom">
-    <div *ngFor="let nameGame of listeGame" (click)="nomGame=nameGame">{{nameGame}}</div>
-  </div>
+  <ul *ngIf="typeJeu==='load' || typeJeu==='replay'" class="listenom">
+    <li class="listName" *ngFor="let nameGame of listeGame" (click)="nomGame=nameGame">{{nameGame}}</li>
+  </ul>
   <div *ngIf="typeJeu==='load'" class="center">
-    <button (click)="onVali()">Load this game !</button>
+    <button class="btn"(click)="onVali()">Load this game !</button>
   </div>
   <div *ngIf="typeJeu==='replay'" class="center">
-    <button (click)="onVali()">Replay this game !</button>
+    <button class="btn" (click)="onVali()">Replay this game !</button>
   </div>
 </div>
-
-  
-
-
 
