--- a/diaballik-frontend/src/app/menu/menu.component.css
+++ b/diaballik-frontend/src/app/menu/menu.component.css
@@ -1,7 +1,10 @@
 .wrapper{
    margin-left: auto;
    margin-right: auto;
-   width:50%;
+   width:80%;
+   border:1px solid black;
+   border-radius:6px;
+   padding:10px;
 }
 label{
     color:white;
@@ -22,12 +25,13 @@ label{
     padding: 16px 32px;
     text-align: center;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
+    font-size: 18px;
+    margin: 8px 2px;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
     cursor: pointer;
     text-decoration: none;
+    margin-left:25%;
     text-transform: uppercase;
 }
 .btn:hover{
@@ -77,6 +81,7 @@ ul {
   #newgame, #load, #replay, #pvp, #pvia{
     margin-bottom:10px;
     margin-top:10px;
+    display:none;
   }
   .labtn{
       background-color:white;
@@ -86,13 +91,17 @@ ul {
       padding: 10px;
       text-align: center;
       display: inline-block;
-      font-size: 16px;
+      font-size: 15px;
       margin: 4px 2px;
       -webkit-transition-duration: 0.4s; /* Safari */
       transition-duration: 0.4s;
       cursor: pointer;
       text-decoration: none;
       text-transform: uppercase;
+      float:left;
+      margin-right:5%;
+      width:20%;
+      margin-left:5%;
   }
     
   .labtn:hover{
@@ -100,7 +109,15 @@ ul {
     color:white;
     background-color:#008CBA;
   }
-  
-body{
-    background-color:#008CBA
-}
+  .nom{
+    width:16%;
+    margin:0 auto;
+  }
+  .choixia{
+    width: 64%;
+    margin-left: 23%;
+  }
+  .choixplateau{
+    width:40%;
+    margin-left:28%;
+  }
