--- a/diaballik-frontend/src/app/board-component/board-component.component.html
+++ b/diaballik-frontend/src/app/board-component/board-component.component.html
@@ -26,5 +26,6 @@
   <button (click) = "redo()">REDO</button>
   <button (click)="save()">SAVE</button>
   <button *ngIf="IA == true"(click) = "iaPlay()">Faire jouer l'IA</button>
+  <button (click)=retourMenu()>Retourner au menu</button>
 </div>
 </main>
