--- a/diaballik-frontend/src/app/menu/menu.component.css
+++ b/diaballik-frontend/src/app/menu/menu.component.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: sudden;
+  src: url(../../assets/font/SuddenDesires.ttf) format("truetype");
+}
 .wrapper{
    margin-left: auto;
    margin-right: auto;
@@ -5,6 +9,8 @@
    border:1px solid black;
    border-radius:6px;
    padding:10px;
+   font-family:'sudden', 'arial';
+   color:white;
 }
 label{
     color:white;
@@ -65,7 +71,7 @@ ul {
     text-decoration: none;
     color:  #008CBA;
     display: block;
-    width: 500px;
+    width: 100%;
     -webkit-transition: font-size 0.3s ease, background-color 0.3s ease;
     -moz-transition: font-size 0.3s ease, background-color 0.3s ease;
     -o-transition: font-size 0.3s ease, background-color 0.3s ease;
@@ -90,7 +96,7 @@ ul {
       border-radius:6px;
       padding: 10px;
       text-align: center;
-      display: inline-block;
+      /*display: inline-block;*/
       font-size: 15px;
       margin: 4px 2px;
       -webkit-transition-duration: 0.4s; /* Safari */
@@ -120,4 +126,19 @@ ul {
   .choixplateau{
     width:40%;
     margin-left:28%;
+  }
+  li, button{
+    font-family:'sudden';
+  }
+  .choixTypeJeu{
+    height:42px;
+  }
+  .listenom{
+    width:49%;
+    margin:auto;
+  }
+  .labellist{
+    width:49%;
+    margin:auto;
+    margin-bottom:5px;
   }
