--- a/diaballik-frontend/src/app/menu/menu.component.html
+++ b/diaballik-frontend/src/app/menu/menu.component.html
@@ -1,8 +1,10 @@
 <div class="wrapper">
+  <div class="choixTypeJeu">
     <input type="radio"  name="typeJeu"  value="newgame" id="newgame" (change)="typeJeu='newgame'" checked required><label [ngStyle]="typeJeu==='newgame' &&  {'border-color': '#0099CC','color':'white','background-color':'#008CBA'}" class="labtn" for="newgame" >New Game</label>
     <input type="radio" name="typeJeu" value="load" id="load"(change)="typeJeu='load'" required><label id="labeload" [ngStyle]="typeJeu==='load' &&  {'border-color': '#0099CC','color':'white','background-color':'#008CBA'}" class="labtn" for="load">Load Game</label>
     <input type="radio" name="typeJeu" value="replay" id="replay"(change)="typeJeu='replay'" required><label id="labelreplay" [ngStyle]="typeJeu==='replay' &&  {'border-color': '#0099CC','color':'white','background-color':'#008CBA'}" class="labtn" for="replay">Replay a game</label>
-    <div class="center">
+  </div> 
+  <div class="center">
     <div *ngIf="typeJeu==='newgame'" class="choixplateau">
       <label for="choixplateau">Type du plateau : 
       <select name="typeBoard" (input)="mode=$event.target.value" id="choixplateau">
@@ -18,7 +20,7 @@
   </div>
   <div *ngIf="typeJeu==='newgame'" class="nom">
     <label for="nomGame">Nom de la partie : </label>
-    <input type="text" (input)="nomGame=$event.target.value" id="nomGame" placeholder="Nom de la partie" required value="{{nomGame}}"><br/>
+    <input type="text" (input)="nomGame=$event.target.value" id="nomGame" placeholder="Nom de la partie" required><br/> <!--value="{{nomGame}}" pour pré-remplir-->
     <label for="nj1">Nom du joueur 1 : </label>
     <input type="text" (input)="n1=$event.target.value" name="nomJ1" placeholder="Nom joueur 1" id="nj1" required><br/>
     <div *ngIf="!this.ia">  
@@ -35,14 +37,14 @@
     </select></label><br/>
   </div>
   <div *ngIf="typeJeu==='newgame'"class="center">
-    <button class="btn" (click)="onVali()">Créér la partie</button>
+    <button class="btn" (click)="onVali()">Creer la partie</button>
   </div>
-  <p *ngIf="typeJeu==='load'">Nom de la partie à charger : {{nomGame.replace('.json','')}}</p>
+  <p *ngIf="typeJeu==='load'" class="labellist">Nom de la partie a charger : {{nomGame.replace('.json','')}}</p>
   <ul *ngIf="typeJeu==='load'" class="listenom">
     <li class="listName" *ngFor="let nameGame of listSave" [ngStyle]="nomGame===nameGame &&  {'font-size': '30px','color':'white','background-color':'#008CBA'}" (click)="nomGame=nameGame.replace('.json','')">{{nameGame.replace('.json','')}}</li><!--Retirer le .json du nom pour ne pas avoir un .json.json dans la save si on load et qu'on resave-->
   </ul>
 
-  <p *ngIf="typeJeu=='replay'">Nom de la partie à replay : {{nomGame.replace('.json','')}}</p>
+  <p *ngIf="typeJeu=='replay'" class="labellist">Nom de la partie a replay : {{nomGame.replace('.json','')}}</p>
   <ul *ngIf="typeJeu=='replay'" class="listenom">
     <li class="listName" *ngFor="let nameGame of listFinish"  [ngStyle]="nomGame===nameGame && {'font-size': '30px','color':'white','background-color':'#008CBA'}" (click)="nomGame=nameGame.replace('.json','')">{{nameGame.replace('.json','')}}</li>
   </ul>
