--- a/diaballik-frontend/src/app/menu/menu.component.css
+++ b/diaballik-frontend/src/app/menu/menu.component.css
@@ -18,16 +18,18 @@ label{
 .center{
     margin-left: auto;
     margin-right: auto;
-    width:50%;
-    
+    width:50%;   
+}
+.center button{
+  padding: 20px 25px;
+  border-radius: 20px;
 }
 
 .btn{
-    color: #0099CC;
+    color: purple;
     background: white;
     border: 2px solid rgb(160, 160, 160);
     border-radius: 6px;
-    color: #0099CC;
     padding: 16px 32px;
     text-align: center;
     display: inline-block;
@@ -41,8 +43,9 @@ label{
     text-transform: uppercase;
 }
 .btn:hover{
-    border-color:#0099CC;
-    background-color: #008CBA;
+    border-color:purple;
+    /*background-color: #008CBA;*/
+    background-color: purple;
     color: white;
 }
 
@@ -69,7 +72,7 @@ ul {
     background-color:white;
     text-align:center;
     text-decoration: none;
-    color:  #008CBA;
+    color:  #0099CC;
     display: block;
     width: 100%;
     -webkit-transition: font-size 0.3s ease, background-color 0.3s ease;
@@ -82,7 +85,8 @@ ul {
   li:hover {
     font-size: 30px;
     color:white;
-    background-color: #008CBA;
+    /*background-color: #008CBA;*/
+    background-color: rgb(0, 199, 206);
   }
   #newgame, #load, #replay, #pvp, #pvia{
     margin-bottom:10px;
@@ -91,7 +95,7 @@ ul {
   }
   .labtn{
       background-color:white;
-      color:#008CBA;
+      color:purple;
       border:2px solid rgb(160, 160, 160);
       border-radius:6px;
       padding: 10px;
@@ -113,7 +117,8 @@ ul {
   .labtn:hover{
     border-color: #0099CC;
     color:white;
-    background-color:#008CBA;
+    /*background-color:#008CBA;*/
+    background-color: purple;
   }
   .nom{
     width:16%;
@@ -130,6 +135,10 @@ ul {
   li, button{
     font-family:'sudden';
   }
+
+  /*li, button:hover{
+    background-color: purple;
+  }*/
   .choixTypeJeu{
     height:42px;
   }
@@ -141,4 +150,44 @@ ul {
     width:49%;
     margin:auto;
     margin-bottom:5px;
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%;
+  }
+
+
+  .nameGame{
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%;
+  }
+
+  .nameJ1{
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%;
+  }
+
+  .nameJ2{
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%;
+  }
+
+  /*.nameLoadedGame{
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%;
+  }*/
+
+  .levelIA{
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%; 
+  }
+
+  .nameBoard{
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%; 
   }
