--- a/diaballik-frontend/src/app/menu/menu.component.html
+++ b/diaballik-frontend/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
   </div> 
   <div class="center">
     <div *ngIf="typeJeu==='newgame'" class="choixplateau">
-      <label for="choixplateau">Type du plateau : 
+      <label for="choixplateau" class="nameBoard">Type du plateau : 
       <select name="typeBoard" (input)="mode=$event.target.value" id="choixplateau">
         <option value="Standard">Standard</option>
         <option value="Random">Random</option>
@@ -19,17 +19,17 @@
     </div>
   </div>
   <div *ngIf="typeJeu==='newgame'" class="nom">
-    <label for="nomGame">Nom de la partie : </label>
+    <label for="nomGame" class="nameGame">Nom de la partie : </label>
     <input type="text" (input)="nomGame=$event.target.value" id="nomGame" placeholder="Nom de la partie" required><br/> <!--value="{{nomGame}}" pour pré-remplir-->
-    <label for="nj1">Nom du joueur 1 : </label>
+    <label for="nj1" class="nameJ1">Nom du joueur 1 : </label>
     <input type="text" (input)="n1=$event.target.value" name="nomJ1" placeholder="Nom joueur 1" id="nj1" required><br/>
     <div *ngIf="!this.ia">  
-      <label for="nj2">Nom du joueur 2 : </label>
+      <label for="nj2" class="nameJ2">Nom du joueur 2 : </label>
       <input type="text" placeholder="Nom Joueur 2" (input)="n2=$event.target.value" id ="nj2" required><br/>
     </div>
   </div>
   <div class="nom" *ngIf="this.ia && typeJeu==='newgame'">
-    <label for="lvlIA">Niveau de l'IA : 
+    <label for="lvlIA" class="levelIA">Niveau de l'IA : 
     <select name="difficulty" (input)="diff=$event.target.value" id="lvlIA">
       <option value="Noob">Noob</option>
       <option value="Advanced">Advanced</option>
