--- a/diaballik-frontend/src/app/menu/menu.component.css
+++ b/diaballik-frontend/src/app/menu/menu.component.css
@@ -22,7 +22,7 @@ label{
 }
 .center button{
   padding: 20px 25px;
-  border-radius: 20px;
+  border-radius: 40px;
 }
 
 .btn{
@@ -113,6 +113,29 @@ ul {
       width:20%;
       margin-left:5%;
   }
+
+  .labtn1{
+    background-color:white;
+    color:purple;
+    border:2px solid rgb(160, 160, 160);
+    border-radius:6px;
+    padding: 10px;
+    text-align: center;
+    /*display: inline-block;*/
+    font-size: 15px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    text-decoration: none;
+    text-transform: uppercase;
+    float:left;
+    margin-right:5%;
+    width:20%;
+    margin-left:5%;
+    border-radius: 50px;
+
+}
     
   .labtn:hover{
     border-color: #0099CC;
