--- a/diaballik-frontend/src/app/menu/menu.component.css
+++ b/diaballik-frontend/src/app/menu/menu.component.css
@@ -2,6 +2,7 @@
   font-family: sudden;
   src: url(../../assets/font/SuddenDesires.ttf) format("truetype");
 }
+
 .wrapper{
    margin-left: auto;
    margin-right: auto;
@@ -11,6 +12,7 @@
    padding:10px;
    font-family:'sudden', 'arial';
    color:white;
+   /*background-color: #18E3F4;*/
 }
 label{
     color:white;
@@ -112,6 +114,7 @@ ul {
       margin-right:5%;
       width:20%;
       margin-left:5%;
+      border-radius: 30px;
   }
 
   .labtn1{
@@ -214,3 +217,5 @@ ul {
     font-weight: bold;
     font-size: 120%; 
   }
+
+  
