--- a/diaballik-frontend/src/app/app.component.css
+++ b/diaballik-frontend/src/app/app.component.css
@@ -3,8 +3,11 @@ h1 {
     /*color: #020495;*/
     color: #0329E8 ;
     font-weight: bold; 
-    font-family: Comic Sans MS, Comic Sans, cursive;
-    font-size: 450%;
-    text-align: center;   
+    /*font-family: Comic Sans MS, Comic Sans, cursive;*/
+    font-family: 'Broadway';
+    font-size: 500%;
+    text-align: center;
+    font-style: italic;
+    text-shadow:5px 5px 2px rgb(120, 11, 223);
 
 }
