--- a/diaballik-frontend/src/app/board-component/board-component.component.css
+++ b/diaballik-frontend/src/app/board-component/board-component.component.css
@@ -50,6 +50,11 @@ div {
     width:700px;
     float: left;
 }
+
+.left p{
+    color: #c01053;
+    font-size: 400%;
+}
 .right{
     float:right;
     margin-right:auto;
@@ -72,7 +77,7 @@ p, h2{
 }
 
 button{
-    background-color: rgb(2, 20, 189);
+    background-color: rgb(141, 0, 54);
     font-weight: bold;
     font-size: 25px;
     padding: 10px 20px;
@@ -81,7 +86,7 @@ button{
 }
 
 button:hover{
-    background-color: rgb(211, 12, 168);
+    background-color: rgb(182, 7, 144);
 }
 
 h2{
@@ -90,6 +95,3 @@ h2{
     font-size: 200%;
 }
 
-/*main{
-    background-color: #18E3F4;
-}*/
