--- a/diaballik-frontend/src/app/menu/menu.component.css
+++ b/diaballik-frontend/src/app/menu/menu.component.css
@@ -7,12 +7,12 @@
    margin-left: auto;
    margin-right: auto;
    width:80%;
-   border:1px solid black;
+   border:1px solid rgb(4, 2, 121);
    border-radius:6px;
    padding:10px;
    font-family:'sudden', 'arial';
    color:white;
-   /*background-color: #18E3F4;*/
+   
 }
 label{
     color:white;
@@ -57,7 +57,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    border: 2px solid  black;
+    border: 2px solid  rgb(4, 10, 100);
     width:500px;
   }
    
@@ -146,6 +146,14 @@ ul {
     /*background-color:#008CBA;*/
     background-color: purple;
   }
+
+  .labtn1:hover{
+    border-color: #0099CC;
+    color:white;
+    /*background-color:#008CBA;*/
+    background-color: rgb(0, 199, 206);
+  }
+
   .nom{
     width:16%;
     margin:0 auto;
