--- a/diaballik-frontend/src/app/board-component/board-component.component.css
+++ b/diaballik-frontend/src/app/board-component/board-component.component.css
@@ -1,4 +1,7 @@
-
+@font-face {
+    font-family: sudden;
+    src: url(../../assets/font/SuddenDesires.ttf) format("truetype");
+  }
 div {
     --size-cell: 100px;
     --border-cell: 5px;
@@ -54,8 +57,10 @@ div {
 }
 .right{
     float:right;
-    margin-right:25%;
-    margin-top:50px;
+    margin-right:auto;
+    margin-left:auto;
+    width:40%;
+    margin-top:270px;
 }
 
 .right p{
@@ -65,7 +70,6 @@ div {
 }
 
 
-<<<<<<< HEAD
 p, h2{
     font-family:'sudden', 'arial';
     color:white;
@@ -91,5 +95,3 @@ h2{
     font-size: 200%;
 }
 
-=======
->>>>>>> parent of d59d569... Amélioration du design/ajout d'une font
