--- a/diaballik-frontend/src/app/board-component/board-component.component.html
+++ b/diaballik-frontend/src/app/board-component/board-component.component.html
@@ -25,7 +25,7 @@
   <button (click) ="undo()">UNDO</button>
   <button (click) = "redo()">REDO</button>
   <button (click)="save()">SAVE</button>
-  <button *ngIf="IA == true"(click) = "iaPlay()">Make IA Play</button>
-  <button (click)=retourMenu()>Back to Menu</button>
+  <button *ngIf="IA == true"(click) = "iaPlay()">Faire jouer l'IA</button>
+  <button (click)=retourMenu()>Retourner au menu</button>
 </div>
 </main>
