--- a/diaballik-frontend/src/app/board-component/board-component.component.css
+++ b/diaballik-frontend/src/app/board-component/board-component.component.css
@@ -9,8 +9,7 @@ div {
 .board {
    box-sizing: border-box;
    border: var(--border-cell) solid;
-   /*background-color: rgba(255, 255, 255, 0.658);*/
-   background-color: #885200;
+   background-color: rgba(255, 255, 255, 0.658);
    width: var(--size-cell);
    height: var(--size-cell);
    float: left;
@@ -50,11 +49,6 @@ div {
     width:700px;
     float: left;
 }
-
-.left p{
-    color: #c01053;
-    font-size: 400%;
-}
 .right{
     float:right;
     margin-right:auto;
@@ -63,35 +57,9 @@ div {
     margin-top:270px;
 }
 
-.right p{
-    color: #020495;
-    /*font-weight: bold;*/
-    font-size: 120%;
-}
-
 
 p, h2{
     font-family:'sudden', 'arial';
     color:white;
     
 }
-
-button{
-    background-color: rgb(141, 0, 54);
-    font-weight: bold;
-    font-size: 25px;
-    padding: 10px 20px;
-    border-radius: 20px;
-    color: white;
-}
-
-button:hover{
-    background-color: rgb(182, 7, 144);
-}
-
-h2{
-    color: purple;
-    font-weight: bold;
-    font-size: 200%;
-}
-
