--- a/diaballik-frontend/src/app/menu/menu.component.html
+++ b/diaballik-frontend/src/app/menu/menu.component.html
@@ -1,8 +1,8 @@
 <div class="wrapper">
   <div class="choixTypeJeu">
-    <input type="radio"  name="typeJeu"  value="newgame" id="newgame" (change)="typeJeu='newgame'" checked required><label [ngStyle]="typeJeu==='newgame' &&  {'border-color': '#0099CC','color':'white','background-color':'#008CBA'}" class="labtn" for="newgame" >New Game</label>
-    <input type="radio" name="typeJeu" value="load" id="load"(change)="typeJeu='load'" required><label id="labeload" [ngStyle]="typeJeu==='load' &&  {'border-color': '#0099CC','color':'white','background-color':'#008CBA'}" class="labtn" for="load">Load a Game</label>
-    <input type="radio" name="typeJeu" value="replay" id="replay"(change)="typeJeu='replay'" required><label id="labelreplay" [ngStyle]="typeJeu==='replay' &&  {'border-color': '#0099CC','color':'white','background-color':'#008CBA'}" class="labtn" for="replay">Replay a Game</label>
+    <input type="radio"  name="typeJeu"  value="newgame" id="newgame" (change)="typeJeu='newgame'" checked required><label [ngStyle]="typeJeu==='newgame' &&  {'border-color': '#0099CC','color':'white','background-color':'purple'}" class="labtn" for="newgame" >New Game</label>
+    <input type="radio" name="typeJeu" value="load" id="load"(change)="typeJeu='load'" required><label id="labeload" [ngStyle]="typeJeu==='load' &&  {'border-color': '#0099CC','color':'white','background-color':'purple'}" class="labtn" for="load">Load a Game</label>
+    <input type="radio" name="typeJeu" value="replay" id="replay"(change)="typeJeu='replay'" required><label id="labelreplay" [ngStyle]="typeJeu==='replay' &&  {'border-color': '#0099CC','color':'white','background-color':'purple'}" class="labtn" for="replay">Replay a Game</label>
   </div> 
   <div class="center">
     <div *ngIf="typeJeu==='newgame'" class="choixplateau">
@@ -14,8 +14,8 @@
       </select></label><br/>
     </div>
     <div *ngIf="typeJeu==='newgame'" class="choixia">  
-      <label [ngStyle]="ia==false &&  {'border-color': '#0099CC','color':'white','background-color':'#008CBA'}" class="labtn1" for="pvp">PVP <input type="radio" name="typeGame" value="PVP" id="pvp" (change)="ia=false" checked required></label>
-      <label [ngStyle]="ia===true &&  {'border-color': '#0099CC','color':'white','background-color':'#008CBA'}" class="labtn1" for="pvia">PVIA<input type="radio" name="typeGame" value="PVIA" id="pvia"(change)="ia=true" required></label><br/><br/><br/>
+      <label [ngStyle]="ia==false &&  {'border-color': '#0099CC','color':'white','background-color':'rgb(0, 199, 206)'}" class="labtn1" for="pvp">PVP <input type="radio" name="typeGame" value="PVP" id="pvp" (change)="ia=false" checked required></label>
+      <label [ngStyle]="ia===true &&  {'border-color': '#0099CC','color':'white','background-color':'rgb(0, 199, 206)'}" class="labtn1" for="pvia">PVIA<input type="radio" name="typeGame" value="PVIA" id="pvia"(change)="ia=true" required></label><br/><br/><br/>
     </div>
   </div>
   <div *ngIf="typeJeu==='newgame'" class="nom">
@@ -41,12 +41,12 @@
   </div>
   <p *ngIf="typeJeu==='load'" class="labellist">Nom de la partie a charger : {{nomGame.replace('.json','')}}</p>
   <ul *ngIf="typeJeu==='load'" class="listenom">
-    <li class="listName" *ngFor="let nameGame of listSave" [ngStyle]="nomGame===nameGame &&  {'font-size': '30px','color':'white','background-color':'#008CBA'}" (click)="nomGame=nameGame.replace('.json','')">{{nameGame.replace('.json','')}}</li><!--Retirer le .json du nom pour ne pas avoir un .json.json dans la save si on load et qu'on resave-->
+    <li class="listName" *ngFor="let nameGame of listSave" [ngStyle]="nomGame===nameGame.replace('.json','') &&  {'font-size': '30px','color':'white','background-color':'rgb(0, 199, 206)'}" (click)="nomGame=nameGame.replace('.json','')">{{nameGame.replace('.json','')}}</li><!--Retirer le .json du nom pour ne pas avoir un .json.json dans la save si on load et qu'on resave-->
   </ul>
 
   <p *ngIf="typeJeu=='replay'" class="labellist">Nom de la partie a replay : {{nomGame.replace('.json','')}}</p>
   <ul *ngIf="typeJeu=='replay'" class="listenom">
-    <li class="listName" *ngFor="let nameGame of listFinish"  [ngStyle]="nomGame===nameGame && {'font-size': '30px','color':'white','background-color':'#008CBA'}" (click)="nomGame=nameGame.replace('.json','')">{{nameGame.replace('.json','')}}</li>
+    <li class="listName" *ngFor="let nameGame of listFinish"  [ngStyle]="nomGame===nameGame.replace('.json','') && {'font-size': '30px','color':'white','background-color':'rgb(0, 199, 206)'}" (click)="nomGame=nameGame.replace('.json','')">{{nameGame.replace('.json','')}}</li>
   </ul>
   <div *ngIf="typeJeu==='load'" class="center">
     <button class="btn"(click)="onVali()">Load this game !</button>
