bouton IA play inutilisable si non IA

--- a/diaballik-frontend/src/app/board-component/board-component.component.html
+++ b/diaballik-frontend/src/app/board-component/board-component.component.html
@@ -27,6 +27,7 @@
   <div style="display:block">
   <button (click)="save()">SAVE YOUR GAME</button>
   <button *ngIf="IA == true"(click) = "iaPlay()">MAKE IA PLAY</button>
+  <button *ngIf="IA != true" style="background-color:grey" disabled>MAKE IA PLAY</button>
   </div>
 </div>
 </main>
