--- a/diaballik-frontend/src/app/board-component/board-component.component.css
+++ b/diaballik-frontend/src/app/board-component/board-component.component.css
@@ -11,7 +11,6 @@ div {
    box-sizing: border-box;
    border: var(--border-cell) solid;
    background-color: rgba(255, 255, 255, 0.658);
-   /*background-color: #885200;*/
    width: var(--size-cell);
    height: var(--size-cell);
    float: left;
@@ -50,6 +49,7 @@ div {
 .left{
     width:700px;
     float: left;
+    text-align:center;
 }
 
 .left p{
@@ -57,8 +57,8 @@ div {
     font-size: 400%;
 }
 .right{
-    float:right;
-    width:28%;
+    float: right;
+    width: 28%;
     margin-top:70px;
 }
 
@@ -82,7 +82,7 @@ button{
     padding: 10px;
     border-radius: 20px;
     color: white;
-    width:150px;
+    width: 150px;
 }
 
 button:hover{
@@ -91,7 +91,11 @@ button:hover{
 
 
 h2{
-    color: purple;
+    margin-left: auto;
+    margin-right: auto;
     font-weight: bold;
     font-size: 200%;
+    margin-bottom: 10px;
+    margin-top: 10px;
+
 }
